compiler/testData/diagnostics/testsWithJdk21/newListMethods.diag.txt
/newListMethods.kt:25:22: error: unresolved reference: getFirst
        return super.getFirst()
                     ^
/newListMethods.kt:29:22: error: unresolved reference: getLast
        return super.getLast()
                     ^
/newListMethods.kt:36:7: error: unresolved reference: getFirst
    x.getFirst()
      ^
/newListMethods.kt:37:7: error: function invocation 'first()' expected
    x.first // synthetic property for getFirst()
      ^
/newListMethods.kt:39:7: error: unresolved reference: getLast
    x.getLast()
      ^
/newListMethods.kt:40:7: error: function invocation 'last()' expected
    x.last
      ^

